feat: add endpoint to retrieve route ways (#195)
Refs: closes #194 

## Summary

Add endpoint to retrieve the route ways using the TSP and A* algorithms.
